# sre-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  agent.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  newkey.txt  package-lock.json  package.json  pyproject.toml  snapshot.md  sre-agent-agent-execution-plan.md
.github/workflows/: ci.yml
apps/api/: dependencies.py  main.py  rate_limit.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/worker/: celery_app.py  eval_tasks.py  tasks.py
demo/: __init__.py  topology.json
demo/alerts/: cache-avalanche.json  db-connection-exhaustion.json  high-5xx.json  pod-restart-loop.json
demo/demo_service/: __init__.py  main.py
demo/faults/: db_diagnostics.json  git_changes.json  k8s.json  traces.json
deploy/: bge-zh.Dockerfile  bge_zh_server.py  loki.yml  prometheus.yml  promtail.yml
deploy/k8s/: README.md
doc/: README.md
doc/00-overview/: architecture.md
doc/01-backend/: api-contract.md  celery.md  config-and-observability.md  data-model.md  (+1 more)
docs/: README.md  final-pre-execution-checklist.md  m9-data-flow.md  m9-rollout.md  m9-threat-model.md  operator-runbook.md  production-checklist.md
migrations/: env.py
plans/: README.md
scripts/: k8s_approval_safety_smoke.sh  k8s_gos_detection_smoke.sh  k8s_live_executor_smoke.sh
tests/: conftest.py
(+324 files in other folders)
