[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-response-agent"
version = "0.1.0"
description = "Local-demo SRE incident response agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "celery[redis]>=5.3",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "pgvector>=0.2",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langgraph-checkpoint-postgres>=2.0",
  "aiosmtplib>=3.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
  "real_email: sends a real email through configured SMTP; skipped unless RUN_REAL_EMAIL_TEST=true",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.coverage.run]
branch = true
source = ["apps", "packages"]
omit = [
  "migrations/*",
  "tests/*",
  "packages/evals/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
